--- a/kubernetes/helm_charts/core/nginx-public-ingress/values.j2
+++ b/kubernetes/helm_charts/core/nginx-public-ingress/values.j2
@@ -330,6 +330,36 @@ proxyconfig: |-
       proxy_busy_buffers_size 16k;
       proxy_pass http://kong;
     }
+    # To enable delete feature
+    location /api/user/v1/delete {
+      # Enabling compression
+      include /etc/nginx/defaults.d/compression.conf;
+      # Enabling caching
+      # caching include Accept-Encoding header also, to provide gziped or plain content as per request
+      proxy_cache_key "$http_accept_encoding|$request_uri|$request_body";
+      proxy_cache large_cache;
+      add_header X-Proxy-Cache $upstream_cache_status;
+      add_header X-Proxy-Cache-Date $upstream_http_date;
+      proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
+      proxy_cache_methods GET HEAD POST;
+      proxy_cache_revalidate on;
+      proxy_cache_background_update on;
+      proxy_cache_lock on;
+      proxy_cache_valid 200 4m;
+      # Increasing the proxy buffer size
+      proxy_buffer_size 16k;
+      proxy_busy_buffers_size 16k;
+      rewrite ^/api/(.*) /$1 break;
+      proxy_set_header Connection "";
+      proxy_set_header Host $host;
+      proxy_set_header X-Scheme $scheme;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_connect_timeout 5;
+      proxy_send_timeout 60;
+      proxy_read_timeout 70;
+      proxy_http_version 1.1;
+      proxy_pass http://kong;
+    }
     location /api/ {
       if ($request_method = OPTIONS ) {
           add_header Access-Control-Allow-Origin "*" ;
